--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "utslabmcpp",
+  "name": "MoondropLinkCopy",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,7 @@
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
-    "@react-navigation/stack": "^7.1.2",
+    "@react-navigation/stack": "^7.2.9",
     "expo": "~52.0.37",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
@@ -21,7 +21,10 @@
     "react-native-screens": "~4.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/navigation": "^4.0.3",
+    "typescript": "^5.3.3",
+    "@types/react": "~18.3.12"
   },
   "private": true
 }
