--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "UTSLabMCPP",
-    "slug": "UTSLabMCPP",
+    "name": "MoondropLinkCopy",
+    "slug": "MoondropLinkCopy",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
